# sample_typing_literal

./: LICENSE  Python.LICENSE  example_1.py  example_2.py  pyproject.toml
