[tool.poetry]
name = "sample_typing_literal"
version = "0.1.0"
description = ""
authors = ["Mizuki Sato <mizki.sato.0025@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.8.2"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
